# Dexifi-Staking-And-IDO-Contracts

./: Anchor.toml  package.json
cli/lottery/: command.ts  scripts.ts
cli/staking/: command.ts  scripts.ts
keys/: admin.json  ttt.json  usdc_tmp.json  user1.json
lib/lottery/: constant.ts  scripts.ts  types.ts  util.ts
lib/staking/: constant.ts  scripts.ts  types.ts
programs/dexifi-lottery/: Cargo.toml
programs/dexifi-lottery/src/: constant.rs  error.rs  lib.rs  state.rs
programs/dexifi-lottery/src/instructions/: buy_ticket.rs  claim_ttt.rs  claim_usdc.rs  init_lottery.rs  init_user.rs  initialize.rs  mod.rs  set_winner.rs  withdraw_usdc.rs
programs/dexifi-staking/: Cargo.toml
programs/dexifi-staking/src/: constant.rs  error.rs  lib.rs  state.rs
programs/dexifi-staking/src/instructions/: initialize.rs  mod.rs  stake_dxe.rs  unstake_dxe.rs  withdraw.rs
